[project]
name = "ai-chatbot-transportation-analysis"
version = "0.1.0"
description = "AI Chatbot for Transportation Data Analysis - Ask questions about transportation data in natural language"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.107.2",
    "gradio>=4.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
    "python-dotenv>=1.0.0",
]
